@@ -8,8 +8,8 @@
     "email": "srdjan.boskovic@sap.com"
   },
   "engines": {
-    "node": "6.x || 8.x || 10.x || 11.x",
-    "npm": "^6.2.0"
+    "node": "8.x || 10.x || 11.x || 12.x",
+    "npm": "^6.9.0"
   },
   "cpu": [
     "!arm"
